--- a/covid-19.html
+++ b/covid-19.html
@@ -34,8 +34,8 @@
 </script>
 <style>
 .box{
-    float:left;
-    margin-right:20px;
+    float:center;
+    margin-right:600px;
 }
 .clear{
     clear:both;
