--- a/covid-19.html
+++ b/covid-19.html
@@ -178,7 +178,7 @@ body, html {
 <button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
 
 <div id="Home" class="tabcontent">
-  <p><iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+  <iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 </div>
 
 <div id="News" class="tabcontent">
@@ -192,7 +192,7 @@ body, html {
 
 <div class="box">
   <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe>
-</div></center>
+</div>
 </div>
 
 <div id="Contact" class="tabcontent">
