--- a/covid-19.html
+++ b/covid-19.html
@@ -178,21 +178,16 @@ body, html {
 <button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
 
 <div id="Home" class="tabcontent">
-  <iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+  <iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
 <div id="News" class="tabcontent">
-	  <iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k" scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'>
-	  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1641110/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
-	    <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe> 
-	
-	<div class="box">
-  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014644/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe>
-</div>
+	<iframe id="preview-frame" src="https://covid-msia2021.netlify.app/covid_pop100k" scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'
+	<iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1641110/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe>
+	<iframe id="preview-frame" src='https://flo.uri.sh/visualisation/1985060/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:600px;'></iframe> 	
+	<iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014644/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe>
+	<iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe>
 
-<div class="box">
-  <iframe id="preview-frame" src='https://flo.uri.sh/visualisation/5014589/embed' scrolling='no' frameborder="0" noresize="noresize" style='width:100%;height:800px;'></iframe>
-</div>
 </div>
 
 <div id="Contact" class="tabcontent">
