--- a/covid-19.html
+++ b/covid-19.html
@@ -129,8 +129,8 @@ body, html {
 </head>
 <body>
 
-<br><br><center>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></center>
+<br><right>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></right>
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
