--- a/covid-19.html
+++ b/covid-19.html
@@ -130,7 +130,7 @@ body, html {
 <body>
 
 <br><right>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></right>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></right>
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
