--- a/covid-19.html
+++ b/covid-19.html
@@ -129,9 +129,6 @@ body, html {
 </head>
 <body>
 
-<br><right>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></right>
-
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://ukkdosm.github.io/blog/" >Home</a>
@@ -272,4 +269,11 @@ function closeNav() {
 </script>
    
 </body>
+
+<footer>
+
+<br><center>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us', '#29abe0', 'J3J33UVAE');kofiwidget2.draw();</script></center>
+
+</footer>
 </html> 
