--- a/covid-19.html
+++ b/covid-19.html
@@ -176,6 +176,7 @@ body, html {
 <button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Overview</button>
 <button class="tablink" onclick="openPage('News', this, 'green')" >Cases</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
+<button class="tablink" onclick="openPage('Trends', this, 'black')">Trends</button>
 <button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
 
 <div id="Home" class="tabcontent">
@@ -216,6 +217,11 @@ body, html {
                             </center>
                     </div>-->
         </center></p>
+</div>
+
+<div id="Trends" class="tabcontent">
+	<p>To be updated soon</p>
+	<!---<iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe>--->
 </div>
 
 <div id="About" class="tabcontent">
