--- a/covid-19.html
+++ b/covid-19.html
@@ -221,7 +221,7 @@ body, html {
 
 <div id="Trends" class="tabcontent">
 	<p>To be updated soon</p>
-	<!---<iframe width="100%" height="2500" src="https://datastudio.google.com/embed/reporting/1a577728-2f31-433e-ac47-df97ae1a0f62/page/NGrzB" frameborder="0" style="border:0" allowfullscreen></iframe>--->
+	<!---<iframe width="100%" height="2500" src="https://tableau.dosm.gov.my/t/CP-CoreTeam/views/COVID19Trends/Covid19?:iid=1&:isGuestRedirectFromVizportal=y&:embed=y" frameborder="0" style="border:0" allowfullscreen></iframe>--->
 </div>
 
 <div id="About" class="tabcontent">
