--- a/covid-19.html
+++ b/covid-19.html
@@ -220,7 +220,7 @@ body, html {
 </div>
 
 <div id="Trends" class="tabcontent">
-	<center><script type='text/javascript' src='https://tableau.dosm.gov.my/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1466px; height: 877px;'><object class='tableauViz' width='1466' height='877' style='display:none;'><param name='host_url' value='https%3A%2F%2Ftableau.dosm.gov.my%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;CP-CoreTeam' /><param name='name' value='COVID19Trends&#47;Covid19' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='iid' value='1' /><param name='isGuestRedirectFromVizportal' value='y' /></object></div>
+	<center><script type='text/javascript' src='https://tableau.dosm.gov.my/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 877px;'><object class='tableauViz' width='100%' height='877' style='display:none;'><param name='host_url' value='https%3A%2F%2Ftableau.dosm.gov.my%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;CP-CoreTeam' /><param name='name' value='COVID19Trends&#47;Covid19' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='iid' value='1' /><param name='isGuestRedirectFromVizportal' value='y' /></object></div>
 		</div></center>
 
 <div id="About" class="tabcontent">
