--- a/covid-19.html
+++ b/covid-19.html
@@ -220,8 +220,9 @@ body, html {
 </div>
 
 <div id="Trends" class="tabcontent">
-	<center><script type='text/javascript' src='https://tableau.dosm.gov.my/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder'><object class='tableauViz' width='100%' style='display:none;'><param name='host_url' value='https%3A%2F%2Ftableau.dosm.gov.my%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;CP-CoreTeam' /><param name='name' value='COVID19Trends&#47;Covid19' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='iid' value='1' /><param name='isGuestRedirectFromVizportal' value='y' /></object></div>
-		</div></center>
+	<iframe src="https://tableau.dosm.gov.my/t/CP-CoreTeam/views/COVID19Trends/Covid19?:showVizHome=no&:embed=true"
+ width="1470" height="877"></iframe>
+		</div>
 
 <div id="About" class="tabcontent">
   <p><iframe width="100%" height="3400"
