--- a/covid-19.html
+++ b/covid-19.html
@@ -220,8 +220,8 @@ body, html {
 </div>
 
 <div id="Trends" class="tabcontent">
-	<iframe src="https://tableau.dosm.gov.my/t/CP-CoreTeam/views/COVID19Trends/Covid19?:showVizHome=no&:embed=true"
- width="1470" height="877"></iframe>
+	<center><iframe src="https://tableau.dosm.gov.my/t/CP-CoreTeam/views/COVID19Trends/Covid19?:showVizHome=no&:embed=true"
+ width="1470" height="877"></iframe></center>
 		</div>
 
 <div id="About" class="tabcontent">
