--- a/covid-19.html
+++ b/covid-19.html
@@ -171,7 +171,7 @@ body, html {
   <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 </div>
 
-<img src="https://lh3.googleusercontent.com/-XuCdKUrFSBo/XoFdP4WkFqI/AAAAAAAA1z8/yAqGOs27SMMBUQ5F49lSwGwQVtTBCKGHACK8BGAsYHg/s0/2020-03-29.png" alt="BannerCovid-19ENG" width="100%" >
+<img src="https://raw.githubusercontent.com/ukkdosm/ukkdosm.github.io/master/covidbanner_2021.png" alt="BannerCovid-19ENG" width="100%" >
 
 <button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Overview</button>
 <button class="tablink" onclick="openPage('News', this, 'green')" >Cases</button>
