--- a/covid-19.html
+++ b/covid-19.html
@@ -173,10 +173,11 @@ body, html {
 
 <img src="https://raw.githubusercontent.com/ukkdosm/ukkdosm.github.io/master/covidbanner2_2021.png" alt="BannerCovid-19ENG" width="100%" >
 
-<button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Overview</button>
+<button class="tablink" onclick="openPage('Home', this, 'red')">Overview</button>
 <button class="tablink" onclick="openPage('News', this, 'green')" >Cases</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
-<button class="tablink" onclick="openPage('Trends', this, 'black')">Trends</button>
+<button class="tablink" onclick="openPage('Trends', this, 'black')"id="defaultOpen">Trends
+<span style="color:#0000FF;"> <img alt="" src="https://www.dosm.gov.my/v1/uploads/images/icon/new_icon_blink.gif" style="width: 32px; height: 14px;"></span></button>
 <button class="tablink" onclick="openPage('About', this, 'orange')">World</button>
 
 <div id="Home" class="tabcontent">
