--- a/covid-19.html
+++ b/covid-19.html
@@ -126,6 +126,10 @@ body, html {
 }
 
 </style>
+	</script>
+
+<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 
